Hopefully fixes form overflow

--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -4,7 +4,6 @@
 @use '../admin/mixins--buttons' as buttonsMixins;
 
 form {
-  width: 100%;
   margin-bottom: 1em;
   margin-top: 1em;
 }
